--- a/index.html
+++ b/index.html
@@ -1,55 +1,228 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Safari Tours & Travel</title>
-<link rel="stylesheet" href="styles.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Safari Tours & Travel</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-<nav>
-<div class="logo">Safari Tours</div>
-<div>
-<a href="#home">Home</a>
-<a href="#vehicles">Vehicles</a>
-<a href="#contact">Contact</a>
-</div>
-</nav>
+  <nav>
+    <div class="logo">Safari Tours</div>
+    <div>
+      <a href="#home">Home</a>
+      <a href="#vehicles">Vehicles</a>
+      <a href="#contact">Contact</a>
+    </div>
+  </nav>
 
+  <header id="home">
+    <h1>Explore Kenya With Comfort & Style</h1>
+  </header>
 
-<header id="home">
-<h1>Explore Kenya With Comfort & Style</h1>
-</header>
+  <section class="section" id="vehicles">
+    <h2>Our Tourist Vehicles</h2>
+    <div class="vehicles">
+      <div class="card">
+        <img src="landcruiser.jpg" alt="Land Cruiser" />
+        <h3>Land Cruiser Safari</h3>
+        <p>Perfect for rough terrain and game drives.</p>
+      </div>
+      <div class="card">
+        <img src="van.jpg" alt="Tour Van" />
+        <h3>Tour Van</h3>
+        <p>Comfortable and affordable for group travel.</p>
+      </div>
+      <div class="card">
+        <img src="coaster.jpg" alt="Coaster Bus" />
+        <h3>Coaster Bus</h3>
+        <p>Ideal for large group tours and long distances.</p>
+      </div>
+    </div>
+  </section>
 
+  <footer id="contact">
+    <p>Contact us: +254 700 000 000 | info@safaritours.com</p>
+    <p>&copy; 2025 Safari Tours & Travel</p>
+  </footer>
 
-<section class="section" id="vehicles">
-<h2>Our Tourist Vehicles</h2>
-<div class="vehicles">
-<div class="card">
-<img src="landcruiser.jpg" alt="Land Cruiser" />
-<h3>Land Cruiser Safari</h3>
-<p>Perfect for rough terrain and game drives.</p>
-</div>
-<div class="card">
-<img src="van.jpg" alt="Tour Van" />
-<h3>Tour Van</h3>
-<p>Comfortable and affordable for group travel.</p>
-</div>
-<div class="card">
-<img src="coaster.jpg" alt="Coaster Bus" />
-<h3>Coaster Bus</h3>
-<p>Ideal for large group tours and long distances.</p>
-</div>
-</div>
-</section>
+  <script src="script.js"></script>
+  
+  <!-- Safari Packages Page -->
+  <section class="section" id="packages">
+    <h2>Safari Packages</h2>
+    
+    <!-- Filters -->
+    <div class="filters">
+      <select>
+        <option>All Budgets</option>
+        <option>Budget</option>
+        <option>Mid‑range</option>
+        <option>Luxury</option>
+      </select>
+      <select>
+        <option>All Durations</option>
+        <option>2 Days</option>
+        <option>3 Days</option>
+        <option>7 Days</option>
+      </select>
+      <select>
+        <option>All Destinations</option>
+        <option>Masai Mara</option>
+        <option>Amboseli</option>
+        <option>Tsavo</option>
+        <option>Diani + Safari</option>
+      </select>
+    </div>
 
+    <div class="packages">
 
-<footer id="contact">
-<p>Contact us: +254 700 000 000 | info@safaritours.com</p>
-<p>&copy; 2025 Safari Tours & Travel</p>
-</footer>
+      <!-- Sample Package Card -->
+      <div class="package-card">
+        <img src="mara.jpg" alt="Masai Mara Safari">
+        <h3>3‑Day Masai Mara Safari (Mid‑range)</h3>
+        <ul>
+          <li>Big 5 Guaranteed</li>
+          <li>Unlimited Game Drives</li>
+          <li>Stay at a Safari Lodge</li>
+        </ul>
+        <button class="view-details">View Itinerary</button>
+      </div>
 
+      <div class="package-card">
+        <img src="amboseli.jpg" alt="Amboseli Safari">
+        <h3>2‑Day Amboseli Safari (Budget)</h3>
+        <ul>
+          <li>Elephants at Kilimanjaro</li>
+          <li>Transport in Tour Van</li>
+          <li>Full‑board Accommodation</li>
+        </ul>
+        <button class="view-details">View Itinerary</button>
+      </div>
 
-<script src="script.js"></script>
+    </div>
+  </section>
+
 </body>
 </html>
+
+/* =============================== */
+/* styles.css */
+
+/* Filters */
+.filters {
+  margin-bottom: 20px;
+  display: flex;
+  gap: 10px;
+}
+.filters select {
+  padding: 10px;
+  border-radius: 8px;
+}
+
+/* Package Cards */
+.packages {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 20px;
+  margin-top: 20px;
+}
+.package-card {
+  background: white;
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+  padding: 15px;
+}
+.package-card img {
+  width: 100%;
+  height: 170px;
+  object-fit: cover;
+  border-radius: 10px;
+}
+.package-card h3 {
+  margin-top: 10px;
+}
+.package-card ul {
+  padding-left: 20px;
+  color: #555;
+}
+.view-details {
+  margin-top: 10px;
+  padding: 10px 15px;
+  background: #0c3b2e;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+}
+/* =============================== */
+
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background: #f9f9f9;
+}
+nav {
+  background: #0c3b2e;
+  padding: 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+}
+nav a {
+  color: white;
+  margin-left: 20px;
+  text-decoration: none;
+  font-weight: bold;
+}
+header {
+  background: url('hero-image.jpg') center/cover no-repeat;
+  height: 70vh;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+header h1 {
+  font-size: 3rem;
+  text-shadow: 2px 2px 8px rgba(0,0,0,0.6);
+}
+.section {
+  padding: 40px 20px;
+  max-width: 1100px;
+  margin: auto;
+}
+.vehicles {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
+}
+.card {
+  background: white;
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+  overflow: hidden;
+}
+.card img {
+  width: 100%;
+  height: 170px;
+  object-fit: cover;
+}
+.card h3, .card p {
+  margin: 10px;
+}
+footer {
+  background: #0c3b2e;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  margin-top: 40px;
+}
+
+/* =============================== */
+/* script.js */
+/* =============================== */
+console.log("Safari Tours website loaded successfully.");
